--- a/index.html
+++ b/index.html
@@ -6,39 +6,72 @@
 
     <link
       rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
 
+    <!-- META TAG OG -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Cascatinha Burguer - O melhor hamburuger dev!"
+    />
+    <meta
+      property="og:image"
+      content="https://projeto-cardapio-wine.vercel.app/assets/hamb-1.png"
+    />
+    <meta
+      property="og:description"
+      content="O melhor hamburuger caseiro de verdade!"
+    />
+    <meta property="og:site_name" content="DevBuruger" />
+
     <link rel="stylesheet" href="./styles/output.css" />
 
     <title>Cascatinha Burguer - A melhor hamburgueria dev!</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header class="w-full h-[420px] bg-zinc-900 bg-home bg-cover bg-center">
       <div class="w-full h-full flex flex-col justify-center items-center">
         <img
           src="./assets/hamb-1.png"
-          alt="Logo DevBurguer"
+          alt="Logo CascatinhaBurguer"
           class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200"
         />
         <h1 class="text-4xl mt-4 mb-2 font-bold text-white">
           Cascatinha Burguer
         </h1>
-
         <span class="text-white font-medium"
           >Av. Deusdedith Salgado, JF - MG</span
         >
         <div class="bg-green-600 px-4 py-1 rounded-lg mt-5" id="date-span">
-          <span class="text-white font-medium">Seg a Dom - 18:00 às 22:00</span>
+          <span class="text-white font-medium">Seg á Dom - 18:00 as 22:00</span>
         </div>
       </div>
     </header>
+    <!-- FIM HEADER -->
+
     <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6">
       Conheça nosso menu
     </h2>
+
+    <!-- INICIO MENU -->
     <div id="menu">
       <main
         class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
@@ -47,7 +80,7 @@
         <div class="flex gap-2">
           <img
             src="./assets/hamb-1.png"
-            alt="Hamburguer Smash"
+            alt="Hamburuger Smash"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
 
@@ -73,11 +106,13 @@
             </div>
           </div>
         </div>
+        <!-- FIM PRODUTO ITEM -->
 
+        <!-- PRODUTO ITEM -->
         <div class="flex gap-2">
           <img
             src="./assets/hamb-2.png"
-            alt="Hamburguer Duplo"
+            alt="Hamburuger Duplo"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
 
@@ -93,7 +128,7 @@
               <p class="font-bold text-lg">R$ 32.90</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="Hamburguer Duplo"
+                data-name="Hamburuger Duplo"
                 data-price="32.90"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -101,7 +136,9 @@
             </div>
           </div>
         </div>
+        <!-- FIM PRODUTO ITEM -->
 
+        <!-- PRODUTO ITEM -->
         <div class="flex gap-2">
           <img
             src="./assets/hamb-3.png"
@@ -124,7 +161,7 @@
               <p class="font-bold text-lg">R$ 35.90</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="Hamburguer Salad"
+                data-name="Hamburuger Salad"
                 data-price="35.90"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -132,16 +169,17 @@
             </div>
           </div>
         </div>
+        <!-- FIM PRODUTO ITEM -->
 
+        <!-- PRODUTO ITEM -->
         <div class="flex gap-2">
           <img
             src="./assets/hamb-4.png"
-            alt="Hamburguer da casa"
+            alt="Hamburuger da casa"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
-
           <div>
-            <p class="font-bold">Hamburguer da casa</p>
+            <p class="font-bold">Hamburuger da casa</p>
             <p class="text-sm">
               Ingredientes exclusivos, uma combinação especial de condimentos ou
               um método de preparo diferenciado que o distingue dos hambúrgueres
@@ -152,7 +190,7 @@
               <p class="font-bold text-lg">R$ 30.00</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="Hamburguer da casa"
+                data-name="Hamburuger da casa"
                 data-price="30"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -162,10 +200,10 @@
         </div>
         <!-- FIM PRODUTO ITEM -->
       </main>
+
       <div class="mx-auto max-w-7xl px-2 my-2">
         <h2 class="font-bold text-3xl">Bebidas</h2>
       </div>
-
       <!-- GRID BEBIDAS -->
       <div
         class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
@@ -178,12 +216,10 @@
             alt="Coca lata"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
-
           <div class="w-full">
-            <p class="font-bold">Coca lata</p>
-
+            <p class="font-bold">Coca-Cola lata</p>
             <div class="flex items-center gap-2 justify-between mt-3">
-              <p class="font-bold text-lg">R$ 6</p>
+              <p class="font-bold text-lg">R$ 6.00</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                 data-name="Coca lata"
@@ -194,6 +230,7 @@
             </div>
           </div>
         </div>
+        <!-- FIM BEBIDA ITEM -->
         <!-- BEBIDA ITEM -->
         <div class="flex gap-2 w-full">
           <img
@@ -201,12 +238,10 @@
             alt="Guaraná lata"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
-
           <div class="w-full">
             <p class="font-bold">Guaraná lata</p>
-
             <div class="flex items-center gap-2 justify-between mt-3">
-              <p class="font-bold text-lg">R$ 6</p>
+              <p class="font-bold text-lg">R$ 6.00</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                 data-name="Guarana lata"
@@ -221,6 +256,7 @@
       </div>
       <!-- FIM GRID BEBIDAS -->
     </div>
+    <!-- FIM MENU -->
     <!-- MODAL CART -->
     <div
       class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden"
@@ -228,14 +264,11 @@
     >
       <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
         <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
-
         <div
           id="cart-items"
           class="flex justify-between mb-2 flex-col max-h-[400px] overflow-auto"
         ></div>
-
         <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
-
         <p class="font-bold mt-4">Endereço de entrega:</p>
         <input
           type="text"
@@ -271,5 +304,11 @@
         <i class="fa fa-cart-plus text-lg text-white"></i>
       </button>
     </footer>
+    <!-- FIM BUTTON CART FOOTER -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
